k8s-config/resilience-tests/recommendation-virtual-service-with-faults.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: recommendation-vs
spec:
  hosts:
    - recommendation
  http:
  - route:
      - destination:
          host: recommendation
    fault:
      abort:
        httpStatus: 500
        percent: 20
